Changes in Shorewall 4.4.19 Beta 1

1)  Place ACK packets in the highest priority band.

Changes in Shorewall 4.4.18 Final

1)  Correct handling of IPv6 host address in a net context.

2)  Restore <burst> in tcdevices.

3)  Correct handling of non-present interfaces and tcfilters.

Changes in Shorewall 4.4.18 RC 1

1)  Update Version.

Changes in Shorewall 4.4.18 Beta 4

1)  Fix trivalue handling AGAIN.

2)  Change default value of MODULE_PREFIX.

3)  Combine Policy and Rules Modules

4)  Move section processing to the Rules modules.

Changes in Shorewall 4.4.18 Beta 3

1)  Change default chain in FORWARD section of the accounting file.

2)  Restrict USER/GROUP to OUTPUT section.

3)  Restore prohibition of MAC addresses in unsectioned config.

4)  Fix several optimizer problems.

Changes in Shorewall 4.4.18 Beta 2

1)  Fix the 'local' Provider option in IPv6

2)  Remove hardcoded 0.0.0.0/0 from Providers.pm

3)  Correct an optimizer defect having to do with jumps containing a
    comment.

Changes in Shorewall 4.4.18 Beta 1

1)  Split up modules file.

2)  Add sections to the accounting file.

Changes in Shorewall 4.4.17

1)  Secure helper and modules files for non-root access.

2)  Rename USE_LOCAL_MODULES to EXPORTMODULES

Changes in Shorewall 4.4.17

1)  Added sch_tbf to the modules files.

Changes in Shorewall 4.4.17 RC 1

1)  Documentation and release notes cleanup.

2)  Ensure that manual and accounting chains aren't too long.

3)  Tighten up the editing of ACCOUNT(...).

4)  Add 'show ipa' command.

5)  Several fixes to IPv6 tcfilters.

6)  Correct three issues in per-IP accounting.

Changes in Shorewall 4.4.17 Beta 3

1)  Allow run-time address variables in the masq file.

2)  Fix silly bug in expand_rule().

3)  Correct two defects in compiler module loading.

4)  Implement per-IP module loading.

Changes in Shorewall 4.4.17 Beta 2

1)  Handle line containing only INCLUDE.

2)  Fix empty SHELL variable handling with bash.
