@@ -1454,6 +1454,9 @@ router-advertisement          =&gt; 134
 neighbour-solicitation        =&gt; 135
 neighbour-advertisement       =&gt; 136
 redirect                      =&gt; 137</programlisting>
+
+    <para>Shorewall 4.4 does not accept lists if ICMP (ICMP6) types prior to
+    Shorewall 4.4.19.</para>
   </section>
 
   <section id="Ranges">
