@@ -640,7 +640,9 @@
           the destination icmp-type(s). ICMP types may be specified as a
           numeric type, a numberic type and code separated by a slash (e.g.,
           3/4), or a typename. See <ulink
-          url="http://www.shorewall.net/configuration_file_basics.htm#ICMP">http://www.shorewall.net/configuration_file_basics.htm#ICMP</ulink>.</para>
+          url="http://www.shorewall.net/configuration_file_basics.htm#ICMP">http://www.shorewall.net/configuration_file_basics.htm#ICMP</ulink>.
+          Note that prior to Shorewall6 4.4.19, only a single ICMP type may be
+          listsed.</para>
 
           <para>If the protocol is <emphasis role="bold">ipp2p</emphasis>,
           this column is interpreted as an ipp2p option without the leading
