@@ -40,6 +40,12 @@ None.
     unconditionally placing ACK packets in priority class 1, this issue
     is avoided.
 
+2)  Up to this point, the Perl-based rules compiler has not accepted
+    ICMP type lists. This is in contrast to the shell-based compiler
+    which did support such lists. 
+
+    Support for ICMP (and ICMPv6) type lists has now been restored. 
+
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
 ----------------------------------------------------------------------------
