@@ -2,6 +2,8 @@ Changes in Shorewall 4.4.19 Beta 1
 
 1)  Place ACK packets in the highest priority band.
 
+2)  Break ICMP lists into individual rules.
+
 Changes in Shorewall 4.4.18 Final
 
 1)  Correct handling of IPv6 host address in a net context.
